# elfio

./: .clang-tidy  CMakeLists.txt
include/: elf_loader.hpp  log.hpp  stack_utils.hpp  utils.hpp
src/: CMakeLists.txt  elf_loader.cpp  main.cpp  stack_utils.cpp  utils.cpp
test-elf/: CMakeLists.txt  main.cpp
